fix overlap over video controls

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
   top: 0;
   width: 100%;
   flex-wrap: wrap;
-  z-index: 48;
+  z-index: 250;
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0));
 }
 
@@ -58,7 +58,6 @@ body {
   font-weight: bold;
   font-size: 4vh;
   margin: 10px;
-  z-index: 52;
   width: 25vw;
   opacity: 0;
   transition: all 0.2s ease-out;
@@ -76,11 +75,11 @@ body {
 }
 
 #wecVid {
+  z-index: 200;
   margin: 20vh 0;
   position: relative;
-  overflow: hidden;
   width: 100%;
-  padding-top: 56.25%;
+  padding-top: 55.9%;
 }
 
 iframe {
